--- a/Unreal Projects/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,8 +167,6 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/StarterContent/Trigger.Trigger
-OpenAssetsAtExit=/Game/StarterContent/RainbowCube.RainbowCube
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -403,8 +401,73 @@ BoxComponent.HLOD=True
 BoxComponent.Mobile=True
 StaticMeshActor.HLOD=True
 StaticMeshActor.Mobile=True
+Respawner_C.Tick=True
+Respawner_C.Replication=True
+Respawner_C.Rendering=True
+Respawner_C.Collision=True
+Respawner_C.Actor=True
+Respawner_C.Input=True
+Respawner_C.TransformCommon=True
+InstancedStaticMeshComponent.TransformCommon=True
+InstancedStaticMeshComponent.StaticMesh=True
+InstancedStaticMeshComponent.InstancedStaticMeshComponent=True
+InstancedStaticMeshComponent.Physics=True
+InstancedStaticMeshComponent.Culling=True
+InstancedStaticMeshComponent.Collision=True
+InstancedStaticMeshComponent.Lighting=True
+InstancedStaticMeshComponent.Rendering=True
+InstancedStaticMeshComponent.Instances=True
+InstancedStaticMeshComponent.Navigation=True
+InstancedStaticMeshComponent.VirtualTexture=True
+InstancedStaticMeshComponent.Tags=True
+InstancedStaticMeshComponent.ComponentReplication=True
+InstancedStaticMeshComponent.Variable=True
+InstancedStaticMeshComponent.Cooking=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Variable=True
+GameSession.TransformCommon=True
+GameSession.Replication=True
+GameSession.Actor=True
+Cube_C.Tick=True
+Cube_C.Replication=True
+Cube_C.Rendering=True
+Cube_C.Collision=True
+Cube_C.Actor=True
+Cube_C.Input=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Events=True
+Cube_C.TransformCommon=True
+Deleter_C.TransformCommon=True
+Deleter_C.Rendering=True
+Deleter_C.Replication=True
+Deleter_C.Collision=True
+Deleter_C.Input=True
+Deleter_C.Actor=True
+Deleter_C.Tick=True
+Deleter_C.Default=True
+Respawner_C.Default=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Cooking=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+Actor.Input=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+RecentlyPlaced=/Game/StarterContent/Deleter.Deleter;
+RecentlyPlaced=/Game/StarterContent/Cube.Cube;
+RecentlyPlaced=/Game/StarterContent/Respawner.Respawner;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/StarterContent/Trigger.Trigger;
 RecentlyPlaced=/Script/Engine.TriggerSphere;/Engine/Transient.ActorFactoryTriggerSphere_0
@@ -426,32 +489,40 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent=
-PrimitiveComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 ActorComponent=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+InstancedStaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+RotatingMovementComponent=
+MovementComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/RainbowCube
-MRUItem1=/Game/StarterContent/Trigger
-MRUItem2=/Game/StarterContent/Bowl
-MRUItem3=/Game/StarterContent/Grey
-MRUItem4=/Game/Geometry/Meshes/1M_Cube
-MRUItem5=/Game/StarterContent/Purple
-MRUItem6=/Game/StarterContent/White
-MRUItem7=/Game/StarterContent/CubeRotate
-MRUItem8=/Game/StarterContent/Yellow
-MRUItem9=/Game/StarterContent/Red
-MRUItem10=/Game/StarterContent/Green
-MRUItem11=/Game/StarterContent/Blue
-MRUItem12=/Game/StarterContent/Black
-MRUItem13=/Game/StarterContent/UltraBlack
-MRUItem14=/Game/StarterContent/M_Basic_Wall_2
+MRUItem0=/Game/StarterContent/Respawner
+MRUItem1=/Game/StarterContent/Deleter
+MRUItem2=/Game/StarterContent/Trigger
+MRUItem3=/Game/StarterContent/Cube
+MRUItem4=/Game/StarterContent/RainbowCube
+MRUItem5=/Game/StarterContent/Bowl
+MRUItem6=/Game/StarterContent/Grey
+MRUItem7=/Game/Geometry/Meshes/1M_Cube
+MRUItem8=/Game/StarterContent/Purple
+MRUItem9=/Game/StarterContent/White
+MRUItem10=/Game/StarterContent/CubeRotate
+MRUItem11=/Game/StarterContent/Yellow
+MRUItem12=/Game/StarterContent/Red
+MRUItem13=/Game/StarterContent/Green
+MRUItem14=/Game/StarterContent/Blue
+MRUItem15=/Game/StarterContent/Black
+MRUItem16=/Game/StarterContent/UltraBlack
+MRUItem17=/Game/StarterContent/M_Basic_Wall_2
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/M_Basic_Wall_2.M_Basic_Wall_2=1
@@ -468,6 +539,9 @@ MRUItem14=/Game/StarterContent/M_Basic_Wall_2
 /Game/StarterContent/Grey.Grey=1
 /Game/StarterContent/Bowl.Bowl=1
 /Game/StarterContent/Trigger.Trigger=1
+/Game/StarterContent/Respawner.Respawner=1
+/Game/StarterContent/Cube.Cube=1
+/Game/StarterContent/Deleter.Deleter=1
 
 [MaterialEditor]
 PrimType=1
@@ -582,7 +656,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/MyProject/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/MyProject/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/10840430/Documents/Unreal Projects/MyProject/Content/
 FBX=../../../../../../Users/10840430/Documents/Unreal Projects/MyProject/Content/
 FBXAnim=../../../../../../Users/10840430/Documents/Unreal Projects/MyProject/Content/
@@ -1435,8 +1509,14 @@ BoxComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGr
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 SceneComponent=
-BP_Sky_Sphere_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BP_Sky_Sphere_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.Collision.Collision,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshReductionSettings,
+Respawner_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
+PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Cube_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
+Deleter_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
+Actor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
+Trigger_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [MessageLog]
 LastLogListing=PIE
