Finished first UE4 Project

--- a/Unreal Projects/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,6 +132,7 @@ MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -139,7 +140,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -161,6 +162,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -462,9 +465,108 @@ RotatingMovementComponent.Tags=True
 RotatingMovementComponent.Activation=True
 RotatingMovementComponent.Cooking=True
 Actor.Input=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.ComponentTick=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Navigation=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+Bowls_C.Tick=True
+Bowls_C.Default=True
+Bowls_C.Replication=True
+Bowls_C.Rendering=True
+Bowls_C.Collision=True
+Bowls_C.Actor=True
+Bowls_C.Input=True
+Bowls_C.TransformCommon=True
+HUD_C.Tick=True
+HUD_C.Default=True
+HUD_C.HUD=True
+HUD_C.Collision=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Events=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.ComponentTick=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+TextRenderComponent.HLOD=False
+TextRenderComponent.Mobile=False
+K2Node_VariableGet.Events=True
+FirstPersonHUD_C.Tick=True
+FirstPersonHUD_C.Default=True
+FirstPersonHUD_C.HUD=True
+FirstPersonHUD_C.Collision=True
+FirstPersonCharacter_C.Default=True
+FirstPersonCharacter_C.Tick=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+UI_C.Appearance=True
+UI_C.Designer=True
+UI_C.Input=True
+UI_C.Interaction=True
+UI_C.Performance=True
+UI_C.Layout=True
+UI_C.Behavior=True
+UI_C.Render Transform=True
+UI_C.Accessibility=True
+UI_C.Clipping=True
+UI_C.Navigation=True
+UI_C.Localization=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+FirstPersonExampleMap_C.Tick=True
+FirstPersonExampleMap_C.Replication=True
+FirstPersonExampleMap_C.Actor=True
+FirstPersonExampleMap_C.Input=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+RecentlyPlaced=/Game/StarterContent/RainbowCube.RainbowCube;
+RecentlyPlaced=/Game/StarterContent/Transparent.Transparent;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Deleter.Deleter;
 RecentlyPlaced=/Game/StarterContent/Cube.Cube;
 RecentlyPlaced=/Game/StarterContent/Respawner.Respawner;
@@ -475,26 +577,22 @@ RecentlyPlaced=/Game/StarterContent/Orange.Orange;
 RecentlyPlaced=/Game/StarterContent/Grey.Grey;
 RecentlyPlaced=/Game/StarterContent/UltraBlack.UltraBlack;
 RecentlyPlaced=/Game/StarterContent/Blue.Blue;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/StarterContent/RainbowCube.RainbowCube;
 RecentlyPlaced=/Game/StarterContent/Purple.Purple;
 RecentlyPlaced=/Game/StarterContent/Red.Red;
 RecentlyPlaced=/Game/StarterContent/Green.Green;
 RecentlyPlaced=/Game/StarterContent/Yellow.Yellow;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
-RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
-Object=
+Object="\"Object.Appearance.Font\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -503,26 +601,32 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyIn
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 RotatingMovementComponent=
 MovementComponent=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Respawner
-MRUItem1=/Game/StarterContent/Deleter
-MRUItem2=/Game/StarterContent/Trigger
-MRUItem3=/Game/StarterContent/Cube
-MRUItem4=/Game/StarterContent/RainbowCube
-MRUItem5=/Game/StarterContent/Bowl
-MRUItem6=/Game/StarterContent/Grey
-MRUItem7=/Game/Geometry/Meshes/1M_Cube
-MRUItem8=/Game/StarterContent/Purple
-MRUItem9=/Game/StarterContent/White
-MRUItem10=/Game/StarterContent/CubeRotate
-MRUItem11=/Game/StarterContent/Yellow
-MRUItem12=/Game/StarterContent/Red
-MRUItem13=/Game/StarterContent/Green
-MRUItem14=/Game/StarterContent/Blue
-MRUItem15=/Game/StarterContent/Black
-MRUItem16=/Game/StarterContent/UltraBlack
-MRUItem17=/Game/StarterContent/M_Basic_Wall_2
+MRUItem0=/Game/StarterContent/UI
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem3=/Game/StarterContent/HUD
+MRUItem4=/Game/StarterContent/Bowls
+MRUItem5=/Game/StarterContent/Cube
+MRUItem6=/Game/StarterContent/Trigger
+MRUItem7=/Game/StarterContent/Respawner
+MRUItem8=/Game/StarterContent/Transparent
+MRUItem9=/Game/StarterContent/Deleter
+MRUItem10=/Game/StarterContent/RainbowCube
+MRUItem11=/Game/StarterContent/Bowl
+MRUItem12=/Game/StarterContent/Grey
+MRUItem13=/Game/Geometry/Meshes/1M_Cube
+MRUItem14=/Game/StarterContent/Purple
+MRUItem15=/Game/StarterContent/White
+MRUItem16=/Game/StarterContent/CubeRotate
+MRUItem17=/Game/StarterContent/Yellow
+MRUItem18=/Game/StarterContent/Red
+MRUItem19=/Game/StarterContent/Green
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/M_Basic_Wall_2.M_Basic_Wall_2=1
@@ -542,6 +646,13 @@ MRUItem17=/Game/StarterContent/M_Basic_Wall_2
 /Game/StarterContent/Respawner.Respawner=1
 /Game/StarterContent/Cube.Cube=1
 /Game/StarterContent/Deleter.Deleter=1
+/Game/StarterContent/Transparent.Transparent=1
+/Game/StarterContent/Bowls.Bowls=0
+/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
+/Game/StarterContent/HUD.HUD=0
+/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=0
+/Game/StarterContent/UI.UI=0
 
 [MaterialEditor]
 PrimType=1
@@ -656,7 +767,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/MyProject/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/MyProject/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/10840430/Documents/Unreal Projects/MyProject/Content/
 FBX=../../../../../../Users/10840430/Documents/Unreal Projects/MyProject/Content/
 FBXAnim=../../../../../../Users/10840430/Documents/Unreal Projects/MyProject/Content/
@@ -1494,6 +1605,8 @@ BlueprintGraph.TimeStamp=2021.08.25-02.31.28
 BlueprintGraph.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2021.08.25-02.31.39
 StaticMeshEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.08.25-02.31.38
+SequencerWidgets.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1503,21 +1616,102 @@ Brush.BrushSettings=True
 StaticMesh.Collision=False
 TriggerBox.Physics=False
 BoxComponent.Physics=False
+StaticMeshActor.Collision=True
 
 [DetailCustomWidgetExpansion]
 BoxComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
-StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
+CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 SceneComponent=
-BP_Sky_Sphere_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
+BP_Sky_Sphere_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.Collision.Collision,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshReductionSettings,
-Respawner_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
-PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-Cube_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
-Deleter_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
-Actor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
-Trigger_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Respawner_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
+Cube_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+Deleter_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+Actor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+Trigger_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+FirstPersonCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
+Bowls_C=
+PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+BillboardComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+HUD_C=
+K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+PlayerState=
 
 [MessageLog]
 LastLogListing=PIE
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
