--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,6 @@ LastLevel=/Game/RollingBP/Maps/RollingBPExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/RollingBP/Blueprints/PhysicsBallBP.PhysicsBallBP
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1068,6 +1067,43 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+PhysicsBallBP_C.TransformCommon=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+BlockingVolume.TransformCommon=True
+BlockingVolume.Collision=True
+BlockingVolume.Navigation=True
+BlockingVolume.Tags=True
+BlockingVolume.Cooking=True
+BlockingVolume.Replication=True
+BlockingVolume.BrushSettings=True
+BlockingVolume.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/RollingBP/Blueprints/PhysicsBallBP
@@ -1107,4 +1143,15 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[DetailPropertyExpansion]
+BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
