--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -181,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/RollingBP/Maps
+UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/Roller/Content/RollingBP/Maps
 BRUSH=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
 FBX=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
 FBXAnim=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/Roller/Content/
@@ -1210,19 +1210,66 @@ Spin3_C.Collision=True
 Spin3_C.Input=True
 Spin3_C.Actor=True
 Spin3_C.Tick=True
+Platform_C.TransformCommon=True
+Platform_C.Rendering=True
+Platform_C.Replication=True
+Platform_C.Collision=True
+Platform_C.Input=True
+Platform_C.Actor=True
+Platform_C.Tick=True
+InterpToMovementComponent.Variable=True
+InterpToMovementComponent.Sockets=True
+InterpToMovementComponent.Control=True
+InterpToMovementComponent.Behaviour=True
+InterpToMovementComponent.Simulation=True
+InterpToMovementComponent.PlanarMovement=True
+InterpToMovementComponent.ComponentTick=True
+InterpToMovementComponent.MovementComponent=True
+InterpToMovementComponent.Tags=True
+InterpToMovementComponent.ComponentReplication=True
+InterpToMovementComponent.Activation=True
+InterpToMovementComponent.Cooking=True
+InterpToMovementComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+Platform_C.Default=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_MakeStruct.PinOptions=True
+K2Node_VariableGet.DefaultValueCategory=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RollingBP/Blueprints/Spin3
-MRUItem1=/Game/RollingBP/Blueprints/Spin4
-MRUItem2=/Game/RollingBP/Maps/Level2
-MRUItem3=/Game/RollingBP/Maps/Level1
-MRUItem4=/Game/RollingBP/Blueprints/Blue
-MRUItem5=/Game/RollingBP/Blueprints/Gray
-MRUItem6=/Game/RollingBP/Blueprints/Orange
-MRUItem7=/Game/RollingBP/Blueprints/Red
-MRUItem8=/Game/RollingBP/Blueprints/Green
-MRUItem9=/Game/RollingBP/Blueprints/PhysicsBallBP
-MRUItem10=/Game/RollingBP/Blueprints/Bowl
+MRUItem0=/Game/RollingBP/Maps/Level2
+MRUItem1=/Game/RollingBP/Maps/Level1
+MRUItem2=/Game/RollingBP/Blueprints/Platform
+MRUItem3=/Game/RollingBP/Blueprints/Spin3
+MRUItem4=/Game/RollingBP/Blueprints/Spin4
+MRUItem5=/Game/RollingBP/Blueprints/Blue
+MRUItem6=/Game/RollingBP/Blueprints/Gray
+MRUItem7=/Game/RollingBP/Blueprints/Orange
+MRUItem8=/Game/RollingBP/Blueprints/Red
+MRUItem9=/Game/RollingBP/Blueprints/Green
+MRUItem10=/Game/RollingBP/Blueprints/PhysicsBallBP
+MRUItem11=/Game/RollingBP/Blueprints/Bowl
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1264,6 +1311,7 @@ NodeTemplateCacheCapMB=20.000000
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+QualityLevel=1
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1273,6 +1321,9 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[60]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[60]\" "
 Object=
+InterpToMovementComponent=
+MovementComponent=
+ActorComponent=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1292,15 +1343,17 @@ bUseUnsortedMenus=False
 /Game/RollingBP/Blueprints/Gray.Gray=1
 /Game/RollingBP/Blueprints/Blue.Blue=1
 /Game/RollingBP/Blueprints/Spin3.Spin3=1
+/Game/RollingBP/Blueprints/Platform.Platform=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/RollingBP/Blueprints/Platform.Platform;
+RecentlyPlaced=/Game/RollingBP/Blueprints/Spin4.Spin4;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Spin3.Spin3;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Gray.Gray;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Orange.Orange;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Red.Red;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Green.Green;
 RecentlyPlaced=/Game/RollingBP/Blueprints/PhysicsBallBP.PhysicsBallBP;
-RecentlyPlaced=/Game/RollingBP/Blueprints/Spin4.Spin4;
 
 [MessageLog]
 LastLogListing=PIE
@@ -1371,4 +1424,7 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
