--- a/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/Roller/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -125,9 +125,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/RollingBP/Maps/Level2
+MRUItem0=/Game/RollingBP/Maps/Level3
 MRUItem1=/Game/RollingBP/Maps/Level1
-MRUItem2=/Game/RollingBP/Maps/RollingBPExampleMap
+MRUItem2=/Game/RollingBP/Maps/Level2
+MRUItem3=/Game/RollingBP/Maps/RollingBPExampleMap
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -154,10 +155,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/RollingBP/Maps/Level2
+LastLevel=/Game/RollingBP/Maps/Level3
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/RollingBP/Blueprints/HomingTurret.HomingTurret
+OpenAssetsAtExit=/Game/RollingBP/Blueprints/Bullet.Bullet
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1256,20 +1259,76 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+Actor.Rendering=True
+Actor.Collision=True
+Platform_2_C.Tick=True
+Platform_2_C.Default=True
+Platform_2_C.Replication=True
+Platform_2_C.Rendering=True
+Platform_2_C.Collision=True
+Platform_2_C.Actor=True
+Platform_2_C.Input=True
+Platform_2_C.TransformCommon=True
+Bullet_C.Tick=True
+Bullet_C.Replication=True
+Bullet_C.Rendering=True
+Bullet_C.Collision=True
+Bullet_C.Actor=True
+Bullet_C.Input=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+HomingTurret_C.Tick=True
+HomingTurret_C.Pawn=True
+HomingTurret_C.Camera=True
+HomingTurret_C.Replication=True
+HomingTurret_C.Rendering=True
+HomingTurret_C.Collision=True
+HomingTurret_C.Actor=True
+HomingTurret_C.Input=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentTick=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+PropertyWrapper.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+HomingTurret_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RollingBP/Maps/Level2
-MRUItem1=/Game/RollingBP/Maps/Level1
-MRUItem2=/Game/RollingBP/Blueprints/Platform
-MRUItem3=/Game/RollingBP/Blueprints/Spin3
-MRUItem4=/Game/RollingBP/Blueprints/Spin4
-MRUItem5=/Game/RollingBP/Blueprints/Blue
-MRUItem6=/Game/RollingBP/Blueprints/Gray
-MRUItem7=/Game/RollingBP/Blueprints/Orange
-MRUItem8=/Game/RollingBP/Blueprints/Red
-MRUItem9=/Game/RollingBP/Blueprints/Green
-MRUItem10=/Game/RollingBP/Blueprints/PhysicsBallBP
-MRUItem11=/Game/RollingBP/Blueprints/Bowl
+MRUItem0=/Game/RollingBP/Blueprints/Bullet
+MRUItem1=/Game/RollingBP/Blueprints/HomingTurret
+MRUItem2=/Game/RollingBP/Blueprints/Platform_2
+MRUItem3=/Game/RollingBP/Maps/Level3
+MRUItem4=/Game/RollingBP/Maps/Level1
+MRUItem5=/Game/RollingBP/Maps/Level2
+MRUItem6=/Game/RollingBP/Blueprints/Platform
+MRUItem7=/Game/RollingBP/Blueprints/Spin3
+MRUItem8=/Game/RollingBP/Blueprints/Spin4
+MRUItem9=/Game/RollingBP/Blueprints/Blue
+MRUItem10=/Game/RollingBP/Blueprints/Gray
+MRUItem11=/Game/RollingBP/Blueprints/Orange
+MRUItem12=/Game/RollingBP/Blueprints/Red
+MRUItem13=/Game/RollingBP/Blueprints/Green
+MRUItem14=/Game/RollingBP/Blueprints/PhysicsBallBP
+MRUItem15=/Game/RollingBP/Blueprints/Bowl
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1344,8 +1403,13 @@ bUseUnsortedMenus=False
 /Game/RollingBP/Blueprints/Blue.Blue=1
 /Game/RollingBP/Blueprints/Spin3.Spin3=1
 /Game/RollingBP/Blueprints/Platform.Platform=1
+/Game/RollingBP/Blueprints/Platform_2.Platform_2=1
+/Game/RollingBP/Blueprints/Bullet.Bullet=1
+/Game/RollingBP/Blueprints/HomingTurret.HomingTurret=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/RollingBP/Blueprints/HomingTurret.HomingTurret;
+RecentlyPlaced=/Game/RollingBP/Blueprints/Platform_2.Platform_2;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Platform.Platform;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Spin4.Spin4;
 RecentlyPlaced=/Game/RollingBP/Blueprints/Spin3.Spin3;
